Wire up UI to services

--- a/app/src/main/res/layout/create_barcode.xml
+++ b/app/src/main/res/layout/create_barcode.xml
@@ -28,9 +28,10 @@
 
     <ImageView
         android:id="@+id/barcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart"
         app:srcCompat="?android:attr/panelBackground" />
 
 </LinearLayout>
