--- a/app/src/main/res/layout/upc_lookup.xml
+++ b/app/src/main/res/layout/upc_lookup.xml
@@ -3,4 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/resultData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 </LinearLayout>
