--- a/app/src/main/res/layout/fda_recall.xml
+++ b/app/src/main/res/layout/fda_recall.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/fdaSearchHint" />
+        android:hint="@string/fda_scan" />
 
     <Button
         android:id="@+id/fdaSearch"
