--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -21,13 +21,13 @@
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_list"
-        android:name="com.zebra.barcodeintellgencetools.ItemListFragment"
+        android:name="com.zebra.barcodeintelligencetools.ItemListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.zebra.barcodeintellgencetools.ItemListActivity"
+        tools:context="com.zebra.barcodeintelligencetools.ItemListActivity"
         tools:listitem="@layout/item_list_content" />
 
     <FrameLayout
