--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -4,17 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/id_text"
+    <ImageView
+        android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_margin="@dimen/text_margin" />
 
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_gravity="center_vertical"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
