--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/settings"
+        android:icon="@drawable/ic_settings"
         android:title="Settings"
         app:showAsAction="always" />
 </menu>
