--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -24,8 +24,8 @@
         android:name="com.zebra.barcodeintelligencetools.ItemListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="20dp"
+        android:background="#F5F5F5"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.zebra.barcodeintelligencetools.ItemListActivity"
         tools:listitem="@layout/item_list_content" />
