--- a/app/src/main/res/layout/upc_lookup.xml
+++ b/app/src/main/res/layout/upc_lookup.xml
@@ -24,8 +24,19 @@
         android:text="@string/lookup_upc" />
 
     <TextView
+        android:id="@+id/resultLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:layout_margin="8dp"
+        android:textSize="16sp"
+        android:text="@string/searchResults" />
+
+    <TextView
         android:id="@+id/resultData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="8dp"
         android:layout_weight="1" />
 </LinearLayout>
