--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -16,13 +16,15 @@
 
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/service_settings">
+  <PreferenceCategory app:title="@string/service_settings"
+                      app:iconSpaceReserved="false">
 
-        <EditTextPreference
-            app:key="apikey"
-            app:title="@string/apikey_title"
-            app:useSimpleSummaryProvider="true" />
+    <EditTextPreference
+        app:key="apikey"
+        app:title="@string/apikey_title"
+        app:useSimpleSummaryProvider="true"
+        app:iconSpaceReserved="false" />
 
-    </PreferenceCategory>
+  </PreferenceCategory>
 
 </PreferenceScreen>
