Add margins to test inputs

--- a/app/src/main/res/layout/create_barcode.xml
+++ b/app/src/main/res/layout/create_barcode.xml
@@ -21,6 +21,8 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:hint="@string/create_hint"
         android:inputType="textMultiLine" />
 
