--- a/app/src/main/res/layout/upc_lookup.xml
+++ b/app/src/main/res/layout/upc_lookup.xml
@@ -9,6 +9,8 @@
         android:id="@+id/upc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="number"
         android:hint="@string/scan" />
