--- a/app/src/main/res/layout/fda_recall.xml
+++ b/app/src/main/res/layout/fda_recall.xml
@@ -10,6 +10,8 @@
         android:id="@+id/fdaSearchTerm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="@string/fda_scan" />
 
